microshift/apps/py-server/namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: py-server
  labels:
    app: py-server
    openshift.io/cluster-monitoring: "false"
    pod-security.kubernetes.io/enforce: privileged
    #pod-security.kubernetes.io/audit: privileged
    #pod-security.kubernetes.io/warn: privileged
