microshift/apps/py-server/deployment-latest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: py-server
  namespace: py-server
  labels:
    app: py-server
spec:
  selector:
    matchLabels:
      app: py-server
  replicas: 1
  template:
    metadata:
      labels:
        app: py-server
    spec:
      containers:
        - name: py-server
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
                - ALL
          resources:
            limits:
              cpu: '1'
              memory: 1Gi
            requests:
              cpu: '500m'
              memory: 500Mi
          image: quay.io/kenmoini/py-server:latest
          ports:
            - containerPort: 7999
              protocol: TCP
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  paused: false
