microshift/apps/py-server/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: py-server
  namespace: py-server
  labels:
    app: py-server
spec:
  selector:
    app: py-server
  ports:
    - protocol: TCP
      port: 7999
      targetPort: 7999
      name: http
